dashboard: Replace copy alert box with a tooltip
When copying a path, display a tooltip box with the text 'copied!' and
make it disappear after 1 second instead of displaying a clickable alert
box.

--- a/swh/scanner/dashboard/static/css/dashboard.css
+++ b/swh/scanner/dashboard/static/css/dashboard.css
@@ -82,8 +82,17 @@ p {
   height: 10px;
   background: conic-gradient(var(--primary-color) 0%, white 0);
   border-radius: 50%;
-  border: solid 1px grey;
+  border: solid 1px var(--grey);
   margin: 0 var(--gap) 0 0;
+}
+
+.tooltip {
+  display: inline-block;
+  background: black;
+  color: white;
+  padding: calc(var(--gap) / 2);
+  margin: 0 0 0 var(--gap);
+  font-size: 0.75rem;
 }
 
 header {
